Fix button overflow issues in sidebar

--- a/app/styles/components/sidebar.scss
+++ b/app/styles/components/sidebar.scss
@@ -45,9 +45,9 @@ sidebar {
 
 		width:100%;
 
-		nav {
+		> nav {
 
-			div {
+			> div {
 
 				&:nth-of-type(1) {
 					top:0;
